fix: finally fix scrollbar styling behaviour

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -42,25 +42,3 @@ a:hover {
   text-decoration: none;
   cursor: pointer;
 }
-
-/* width */
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey !important;
-  border-radius: 2px !important;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #3d4653 !important;
-  border-radius: 2px !important;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #565f6c !important;
-}
